crates/formatter/tests/snapshots/snapshots__synapse__main__delta__27__account_data.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2015, 2016 OpenMarket Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

create table if not exists account_data (
	user_id text not null,
	account_data_type text not null, -- The type of the account_data.
	stream_id bigint not null, -- The version of the account_data.
	content text not null, -- The JSON content of the account_data
	constraint account_data_uniqueness unique (user_id, account_data_type)
);


create table if not exists room_account_data (
	user_id text not null,
	room_id text not null,
	account_data_type text not null, -- The type of the account_data.
	stream_id bigint not null, -- The version of the account_data.
	content text not null, -- The JSON content of the account_data
	constraint room_account_data_uniqueness
		unique (user_id, room_id, account_data_type)
);


create index account_data_stream_id on account_data (user_id, stream_id);
create index room_account_data_stream_id
	on room_account_data (user_id, stream_id);
